# Cosmos3-Nano-WebUI

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-07-15T20-25-11-188Z.yml
api/app/: __init__.py  auth.py  errors.py  health.py  jobs_router.py  main.py  openapi_export.py  readiness.py  schemas.py
api/engines/: __init__.py  base.py
api/jobs/: __init__.py  artifacts.py  events.py  gen_client.py  model.py  runner.py  store.py
api/orchestrator/: __init__.py  container.py  gen_worker.py  manager.py  planes.py  residency.py  worker.py
api/preprocessing/: __init__.py  action_schema.py  limits.py  media.py  negative_prompt.py  paths.py
deploy/: api.Dockerfile  docker-compose.base.yml  docker-compose.fp8.yml  docker-compose.nvfp4.yml  docker-compose.reasoning.yml  vllm-omni.Dockerfile  webui.Dockerfile
docs/: eval_seed_cases.md  evidence_map.md  handoff.md  model_setup.md  prd.md  project_contract.md  release_checklist.md  risk_register.md  session_1.md  session_1_contract.yaml  session_2.md  session_2_contract.yaml  session_3_contract.yaml  session_4.md  session_4_contract.yaml  session_5.md  session_5_contract.yaml  session_6_contract.yaml  session_7_contract.yaml  session_8_contract.yaml
docs/eval_corpus/: mig_s2_private_source_scrub.md  (+7 more)
schemas/: README.md  openapi.json
tests/: conftest.py  test_action_adapter_unit.py  test_action_loader_unit.py  test_action_schema.py  test_artifacts_video.py  test_container_plane_spec.py  test_container_worker.py  test_context_cap.py  test_coresidency_unit.py  test_engine_base.py  test_gen_engine_selection.py  test_gen_worker_mapping.py  test_gpu_marker_policy.py  test_health.py  test_idle_keepwarm_default.py  test_integ_kill_unit.py  test_integ_swap_concurrency.py  test_integ_swap_unit.py  test_metered_orchestrator.py  test_metered_work.py  test_metrics_collectors.py  test_metrics_endpoint.py  test_metrics_exposition.py  test_metrics_middleware.py  test_openapi.py  test_private_ref_scan.py  test_readiness_unit.py  test_reasoner_adapter_unit.py  test_schemas.py  test_submission_counter.py  test_vllm_omni_client.py  test_vllm_omni_work.py  test_warmup.py
webui/: .gitignore  eslint.config.mjs  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts  vitest.setup.ts
(+542 files in other folders)
